--- a/Xx4evRockerxX/86771-shopkeeper/rus.textile
+++ b/Xx4evRockerxX/86771-shopkeeper/rus.textile
@@ -70,7 +70,7 @@
 
 Интересно, как она снова использовала термин «мы». Он не заходил в в*нную. Я полагаю, это подтвердило мои прежние подозрения, что она намеренно держит его.
 
-«Хорошо, тогда спокойного отдыха в пути», — предложила я, поскольку она не могла встретиться со мной взглядом и довольно быстро вышла из парадной двери.
+«Хорошо, тогда спокойного отдыха в пути», — предложил я, поскольку она не могла встретиться со мной взглядом и довольно быстро вышла из парадной двери.
 
 Снова один, он вернулся к организации и пополнению запасов для меня.
 
@@ -80,9 +80,9 @@
 
 Я сделал большой глоток через соломинку и уже собирался встать на колени перед частично заполненной полкой, когда в дверь вошёл мужчина средних лет.
 
-«Доброе утро!» Я поздоровался. «Что я могу сделать для вас?»
+— Доброе утро! — поздоровался я. — Что я могу сделать для вас?
 
-«Хорошая дорога, вы там», — усмехнулся он.
+— Хорошая дорога, вы там, — усмехнулся он.
 
 — Это нечто, — ответил я ему в лёгкой беседе.
 
@@ -172,7 +172,7 @@
 
 «Уверенный. Сегодня утром у меня уже было 4 клиента, — сказал Джек.
 
-— Ты меня побил, — ответил я. «У меня пока только 3».
+— Ты меня побил, — ответил я. — У меня пока только 3.
 
 После неловкой паузы Джек продолжил. — Собственно, поэтому я и звоню. Вдобавок к жаре, я хотел предупредить вас, что автобус, только что проехавший мимо, направился в вашу сторону, может быть, полчаса назад.
 
@@ -182,9 +182,9 @@
 
 Большие чартерные автобусы обычно имели на борту небольшую в*нную комнату. Они также, как правило, двигались немного быстрее, что приводило к меньшей спешке, когда они неизбежно подходили к моей входной двери.
 
-С другой стороны, гораздо худший сценарий был —
+С другой стороны, гораздо худший сценарий был.
 
-«Мне неприятно говорить вам, что это был жёлтый автобус», — подтвердил мои опасения Джек.
+— Мне неприятно говорить вам, что это был жёлтый автобус, — подтвердил мои опасения Джек.
 
 Медленное движение. Обычно без кондиционера и окон, открывающихся только на 5 см для вентиляции. Нет на борту средств для оказания помощи. Жёлтые автобусы были старыми школьными автобусами, которые сдавали в аренду большим группам людей для длительных поездок.
 
@@ -194,7 +194,7 @@
 
 — Спасибо за предварительное уведомление, Джек, — поблагодарил я его.
 
-«В любое время», — сказал Он. «Удачи».
+— В любое время», — сказал он. — Удачи.
 
 Я начал делать математику, как я повесил трубку. Жёлтые автобусы обычно преодолели расстояние примерно за 4 часа. Джек видел, как они прошли полчаса назад. Это означало, что я мог ожидать их около 11 часов.
 
@@ -250,7 +250,7 @@
 
 «Это будет 4,32 доллара», — сказал я, зная цену наизусть. Так много людей используют его в качестве своего предмета, чтобы попытаться достичь минимума в 5 долларов. Отчасти поэтому я поставил их так близко к двери.
 
-— О, — явно ответила она, становясь всё более обезумевшей. «Я, эм… я увидела вашу вывеску снаружи и подумала, что это будет больше и… Могу я просто дать вам 5 долларов и пойти в туалет? Пожалуйста?»
+— О, — явно ответила она, становясь всё более обезумевшей. — Я, эм… я увидела вашу вывеску снаружи и подумала, что это будет больше и… Могу я просто дать вам 5 долларов и пойти в туалет? Пожалуйста?
 
 «Даже не беспокойся об этом, просто иди», — ответил я. — Вон там, в углу.
 
@@ -292,21 +292,23 @@
 
 Мои ноги были скрещены друг с другом, так как я ожидал, что мне придётся долго ждать, чтобы воспользоваться собственной в*нной. Автобус стоял там.
 
-Я мог помочиться.
+Я мог поссать.
 
 Что их так задержало? Я предвидел и пережил широкий спектр всевозможных событий, которые происходили с подъезжающим автобусом.
 
 Сидеть так минуту за минутой без движения было не то, к чему я был готов.
 
-Я мог помочиться.
+Я мог поссать.
 
 Наконец, после того, что могло бы быть для меня целых два похода в туалет, незамужняя женщина средних лет вышла из жёлтого автобуса и вошла внутрь.
 
 — Доброе утро, — ласково поздоровалась она так, как мог только учитель.
 
-«Привет, доброе утро», — ответила я так нормально, как только могла, учитывая, насколько странным становился этот сценарий. «С чем я могу вам помочь?»
+— Привет, доброе утро, — ответила я так нормально, как только могла, учитывая, насколько странным становился этот сценарий. — С чем я могу вам помочь?
 
-Женщина задумалась на мгновение, подбирая слова. «Меня зовут Патрисия Вудс, я заведующая отделением медсестёр в Государственном университете».
+Женщина задумалась на мгновение, подбирая слова. 
+
+— Меня зовут Патрисия Вудс, я заведующая отделением медсестёр в Государственном университете.
 
 «Несколько моих коллег-профессоров, студенты второго курса медсестёр и я направляемся в одну из наших дочерних школ, которая предлагает бесплатные медицинские осмотры, вакцинацию от гриппа и некоторые другие задачи по работе с населением», — продолжила она.
 
@@ -332,7 +334,9 @@
 
 «… Мы ищем ближайшую зону отдыха. Поскольку мы были местными и первыми, кого мы увидели за последние несколько часов, мы надеялись, что вы сможете помочь? — заключила она.
 
-Это было всё, что я мог сделать, чтобы скрыть удивление на лице. «Ну, к сожалению, на всём этом участке дороги нет официальных остановок для отдыха», — сообщил я новость.
+Это было всё, что я мог сделать, чтобы скрыть удивление на лице. 
+
+— Ну, к сожалению, на всём этом участке дороги нет официальных остановок для отдыха, — сообщил я новость.
 
 «До тех пор, пока вы не доберётесь до города, здесь довольно малолюдно. Но это ещё час или около того.
 
@@ -344,7 +348,7 @@
 
 «Могут ли некоторые из этих студентов пользоваться здешним туалетом, если у вас есть общественный туалет?» Она НАКОНЕЦ спросила.
 
-«Конечно!» Я ответил, рад, что мы наконец добились прогресса. «Как я мог отказать некоторым ученикам, которые посвящают свою работу помощи другим?!»
+— Конечно! — ответил я, рад, что мы наконец добились прогресса. — Как я мог отказать некоторым ученикам, которые посвящают свою работу помощи другим?!
 
 «Отличный!» Она выглядела немного облегчённой. Я предположил, что есть шанс, что, как она думала, я откажусь, и, судя по всему, в настоящее время «нет» не было вариантом, по крайней мере, для некоторых из них.
 
@@ -356,13 +360,15 @@
 
 Вторая и третья девушки выглядели не в лучшей форме, а номер три держал руку не так незаметно *рядом* с промежностью. Оба быстро последовали их примеру прямо в в*нную, чтобы не так терпеливо ждать своей очереди.
 
-Я не обратил особого внимания, когда они вышли из автобуса, сосредоточившись в основном на первой девушке. Когда дверь распахнулась, я понял, что четвёртая женщина, вероятно, не была студенткой, по крайней мере, 40 лет и с видом профессора. Она выглядела совершенно подавленной и как будто может обмочиться в любой момент.
+Я не обратил особого внимания, когда они вышли из автобуса, сосредоточившись в основном на первой девушке. Когда дверь распахнулась, я понял, что четвёртая женщина, вероятно, не была студенткой, по крайней мере, 40 лет и с видом профессора. Она выглядела совершенно подавленной и как будто может обоссаться в любой момент.
 
 Как неловко! Я сочувствовал ей, зная, как она чувствовала себя так плохо, но в то же время будучи авторитетным человеком.
 
 Она тоже бросилась назад, сохраняя свою позицию четвёртой в очереди, но с наименьшей вероятностью она смогла бы ждать, так как теперь активно держалась и согнулась.
 
-Патрисия вернулась к прилавку. — Бедняжки, — предложил я. «Они выглядят ужасно отчаянными».
+Патрисия вернулась к прилавку.
+
+— Бедняжки, — сказал я. — Они выглядят ужасно отчаянными.
 
 «Конечно, это был трудный последний час», — ответила Она, обращаясь прямо ко мне.
 
@@ -370,9 +376,9 @@
 
 «Конечно», интересно, куда она шла.
 
-«Я не думаю, что кто-то в нашей компании сейчас откажется от похода в туалет», — начала она, поджимая губы. «Себя в том числе».
+— Я не думаю, что кто-то в нашей компании сейчас откажется от похода в туалет, — начала она, поджимая губы. — Себя в том числе.
 
-Я мог помочиться…
+Я мог поссать…
 
 *011*2023-03-06 01:49
 
@@ -390,9 +396,9 @@
 
 Я действительно могу оставаться в таком состоянии удивительно долго. Не то чтобы это было весело. И не то, чтобы я слишком сильно хотел сделать это перед кем-то ещё. Но это не страшно, когда вы хотите поспать ещё немного, или вы находитесь на публике и просто не имеете доступа к туалету в этот момент, или когда на вашей стоянке стоит автобус, полный студентов-медсестёр, и всё это также нужно пописить.
 
-«Спасибо за вашу честность, — ответил я Патриции.
+— Спасибо за вашу честность, — ответил я Патриции.
 
-Я на мгновение задумался, прежде чем продолжить: «Я думаю, что в равной степени справедливо, что я полностью честен с вами. Я как раз собиралась сама пойти в в*нную, когда вы вошли. Утро было на удивление загруженным, и у меня не было возможности сходить, хотя мне пришлось это сделать уже некоторое время.
+Я на мгновение задумался, прежде чем продолжить: «Я думаю, что в равной степени справедливо, что я полностью честен с вами. Я как раз собиралась сама пойти в туалет, когда вы вошли. Утро было на удивление загруженным, и у меня не было возможности сходить, хотя мне пришлось это сделать уже некоторое время.
 
 «Итак, я полностью и полностью понимаю, что вы чувствуете прямо сейчас».
 
@@ -402,13 +408,13 @@
 
 — Я говорю о том, что вон та в*нная сзади — вот и всё. второго у меня нет. Он маленький. Там только один туалет. Я не знаю, сколько у вас студентов и сотрудников в вашем автобусе и насколько сильно кому-то нужно ехать, но я беспокоюсь, что всем может понадобиться много времени, чтобы им воспользоваться».
 
-— Это интересный момент, — согласилась Патрисия. «У нас есть я, профессор Смит, последний в очереди, 3 других профессора и всего 54 студента».
+— Это интересный момент, — согласилась Патрисия. — У нас есть я, профессор Смит, последний в очереди, 3 других профессора и всего 54 студента.
 
 54 СТУДЕНТА?!?! Они были бы здесь весь день, и я НЕ мог ждать так долго. Судя по этим 4, некоторые из них не смогли.
 
 — Я… мне жаль, профессор. Я открыт для творческих решений, но я не думаю, что каждый сможет воспользоваться моей в*нной, прежде чем это займёт слишком много времени, — мягко сказал я. Мне было искренне жаль. Судя по тому, как я себя чувствовал и как выглядел бедный профессор Смит, когда первая ученица наконец вышла, позволяя второй ворваться за ней, я мог только представить, через что прошли все остальные в автобусе.
 
-«На самом деле, я хотела бы обсудить с вами некоторые творческие решения», — ответила она, снова к моему удивлению. «Вы были очень открыты и честны со мной, и я ценю это, и я хотел бы отплатить тем же — будучи полностью открытым с вами, я не доберусь до города. И я не знаю, поступили бы и некоторые из моих учеников».
+«На самом деле, я хотела бы обсудить с вами некоторые творческие решения», — ответила она, снова к моему удивлению. — Вы были очень открыты и честны со мной, и я ценю это, и я хотел бы отплатить тем же — будучи полностью открытым с вами, я не доберусь до города. И я не знаю, поступили бы и некоторые из моих учеников.
 
 Впервые за несколько месяцев я почувствовал, что истекаю кровью.
 
@@ -418,13 +424,13 @@
 
 К моему большому удивлению, Патрисия была полна творчества и решения проблем.
 
-«У нас 10 студентов мужского пола», — начала она, когда я спросил её, что она имеет в виду. «Конечно, с вашего разрешения, я уверен, что мы могли бы легко найти дерево, которое они могли бы полить».
+— У нас 10 студентов мужского пола, — начала она, когда я спросил её, что она имеет в виду. — Конечно, с вашего разрешения, я уверен, что мы могли бы легко найти дерево, которое они могли бы полить.
 
-— Достаточно легко, — согласился я. «Повезло им».
+— Достаточно легко, — согласился я. — Повезло им.
 
 «Правильно должно быть мило», — подтвердила Патрисия.
 
-«Есть ещё 4 моих девочки, о которых я очень беспокоюсь», — продолжила она. «Я думаю, прежде всего, они уже должны встать в очередь».
+— Есть ещё 4 моих девочки, о которых я очень беспокоюсь, — продолжила она. — Я думаю, прежде всего, они уже должны встать в очередь.
 
 Словно по сигналу, вторая ученица вышла из в*нной, позволив третьей промчаться мимо неё к её собственному столь необходимому облегчению. Это оставило только профессора Смита в очереди, казалось бы, едва держащейся, когда она схватилась за свою промежность и наклонилась.
 
@@ -466,13 +472,13 @@
 
 Наконец, повернувшись к Патриции, я смог продолжить: «За магазином есть место, где с обеих сторон бетонные стены. Так что с 3-х сторон он защищён от любого взгляда, а с четвёртой — 100 миль дикой природы. Это небольшая территория, может быть, достаточно большая для полудюжины за раз».
 
-«Это звучит идеально!» — чирикнула Патрисия. «Конечно, лучше, чем наше нынешнее затруднительное положение».
+— Это звучит идеально! — чирикнула Патрисия. — Конечно, лучше, чем наше нынешнее затруднительное положение.
 
 — Есть только одна проблема, — с сожалением начал я.
 
 Как раз когда я собирался объяснить свою озабоченность, входная дверь снова открылась, и вошли две женщины — одной лет 19 или 20, другой около 50. Мать и дочь?
 
-— Привет, — начала старшая из женщин. «Мы с дочерью возвращаемся в её колледж после каникул, и что ж… Мы не ожидали такой длинной дороги, и теперь ей действительно нужно в туалет».
+— Привет, — начала старшая из женщин. — Мы с дочерью возвращаемся в её колледж после каникул, и что ж… Мы не ожидали такой длинной дороги, и теперь ей действительно нужно в туалет.
 
 Мать и дочь.
 
@@ -486,9 +492,9 @@
 
 Не то чтобы меня это особенно заботило. Учитывая проблему, которую мне ещё предстояло объяснить Патриции, бедному профессору Смиту, растущую линию в моей в*нной, мой собственный наполненный мочевой пузырь и мокрое нижнее бельё, мне, честно говоря, было всё равно, смущена ли эта студентка из колледжа.
 
-— О, дорогая, нечего смущаться. Это совершенно нормально. Это был долгий путь». Мать утешила, прежде чем обратиться к Патрисии и ко мне. «Я хотел бы воспользоваться вашей в*нной, если она свободна. И моя дочь будет сопровождать меня тогда, так как ей, по-видимому, внезапно больше не нужно идти, хотя она была той, кто только что был в машине, умоляя меня остановиться здесь, чтобы она могла поехать».
+— О, дорогая, нечего смущаться. Это совершенно нормально. Это был долгий путь! — утешила мать, прежде чем обратиться к Патрисии и ко мне. — Я хотел бы воспользоваться вашей в*нной, если она свободна. И моя дочь будет сопровождать меня тогда, так как ей, по-видимому, внезапно больше не нужно идти, хотя она была той, кто только что был в машине, умоляя меня остановиться здесь, чтобы она могла поехать».
 
-«Пожалуйста, — предложил я, указывая на заднюю часть магазина. «К сожалению, есть небольшая очередь».
+— Пожалуйста, — предложил я, указывая на заднюю часть магазина. — К сожалению, есть небольшая очередь.
 
 Язык тела дочери мгновенно изменился при виде очереди, что означало, что она внезапно не была уверена, что сможет ждать так долго.
 
@@ -504,7 +510,7 @@
 
 *015*2023-03-09 00:44
 
-«Давайте сосредоточимся на одной проблеме за раз», — посоветовала Патрисия. «Нет смысла торопить одну проблему, чтобы решить другую».
+— Давайте сосредоточимся на одной проблеме за раз, — посоветовала Патрисия. — Нет смысла торопить одну проблему, чтобы решить другую.
 
 Ей было легко говорить, когда мой мочевой пузырь был второй проблемой.
 
@@ -516,7 +522,7 @@
 
 «Ну… Моё дерево, единственное дерево рядом с магазином… Оно буквально прямо перед тем уединённым местом».
 
-— О, — Патрисия сделала паузу. «Это небольшая проблема».
+— О, — Патрисия сделала паузу. — Это небольшая проблема.
 
 Очевидно.
 
@@ -526,7 +532,7 @@
 
 «Более нигде не видно дороги хоть в каком-то качестве», — с сожалением подтвердил я.
 
-— Хорошо, — начала Патрисия. «Позвольте мне подумать об этом на секунду. — Какая у тебя вторая проблема?
+— Хорошо, — начала Патрисия. — Позвольте мне подумать об этом на секунду. Какая у тебя вторая проблема?
 
 Я уже собирался объяснить своё ухудшающееся положение, когда меня прервал шум, доносившийся из в*нной.
 
@@ -544,25 +550,27 @@
 
 Мать и дочь с радостью поднялись на одну строчку вверх. Судя по языку тела, дочери определённо должно было стать хуже, хотя она всё равно это отрицала.
 
-— Я не хочу подслушивать, — продолжила Она. «Но я слышал, вы упомянули, что, возможно, вы согласны с тем, что люди справляются с нуждой позади этого магазина?»
+— Я не хочу подслушивать, — продолжила она. — Но я слышал, вы упомянули, что, возможно, вы согласны с тем, что люди справляются с нуждой позади этого магазина?
 
 «Я абсолютно НЕ согласен с тем, что незнакомцы мочатся где-нибудь рядом с моим магазином, кроме как в моей в*нной», — начал я.
 
 Женщина выглядела напуганной, как будто я только что предрешил её судьбу, не выдержав. Мы оба знали, что она уступила своё место в очереди. И мы оба знали, что мать и определённо дочь (хотя она нашла способ выкрутить его, чтобы притвориться, что её мочевой пузырь не наполнен) не подпустили бы её к себе.
 
-«Однако», — продолжил я, когда она подняла взгляд с проблеском надежды. «Это необычное обстоятельство, и я готов пойти на некоторые уступки».
+— Однако, — продолжил я, когда она подняла взгляд с проблеском надежды. — Это необычное обстоятельство, и я готов пойти на некоторые уступки.
 
 Она глубоко вздохнула, прежде чем спросить: «Не могли бы вы позволить мне пойти туда? Я… я честно не могу больше ждать.
 
 Ты и я оба. Я просто ещё не признался в этом вслух.
 
-Я вздохнул. «Конечно».
+Я вздохнул. 
+
+— Конечно.
 
 Она бы прыгала от радости, если бы не боялась потерять контроль.
 
 — Следуй за мной, — предложила я, поворачиваясь к задней комнате и задней двери.
 
-— Вообще-то, — я на мгновение замолчал. «Патриция, тебе тоже следует пойти с нами, чтобы ты могла точно увидеть, как всё это выглядит там, и что я имел в виду, говоря о нашей первой проблеме».
+— Вообще-то, — я на мгновение замолчал. — Патриция, тебе тоже следует пойти с нами, чтобы ты могла точно увидеть, как всё это выглядит там, и что я имел в виду, говоря о нашей первой проблеме.
 
 «Идеальный». Она согласилась и пошла в ногу с молодой женщиной, которая в предвкушении кусала меня за пятки.
 
@@ -594,7 +602,7 @@
 
 — Я собираюсь решить вторую проблему, — поспешно ответил я. — Мне действительно нужно идти.
 
-«Если ты помнишь, как и я», — ответила она. «Но мой главный приоритет — это мои ученики. Если дело доходит до того, что они не справляются или я теряю контроль, это лёгкое решение».
+— Если ты помнишь, как и я, — ответила она. — Но мой главный приоритет — это мои ученики. Если дело доходит до того, что они не справляются или я теряю контроль, это лёгкое решение.
 
 Ухххх
 
@@ -614,15 +622,17 @@
 
 Патрисия и я были у двери, чтобы вернуться внутрь, когда: «О! Подожди секунду. Могу я спросить ещё об одном?» Произошло от молодой женщины позади нас.
 
-Её струя всё ещё была видна, хотя и с меньшим давлением, теперь мне было трудно сосредоточиться, учитывая моё собственное желание сорвать джинсы и присоединиться к ней. «Да?»
+Её струя всё ещё была видна, хотя и с меньшим давлением, теперь мне было трудно сосредоточиться, учитывая моё собственное желание сорвать джинсы и присоединиться к ней. 
+
+— Да?
 
 «Гм. У тебя действительно есть что-нибудь, чем я мог бы вытереться? — робко спросила она, явно смущённая.
 
-— Абсолютно нет, — ответил я. «Вся эта природа и нетронутая земля вокруг нас. Я не поддержу загрязнение его чем-то большим, чем то, что человеческое тело производит естественным путём».
+— Абсолютно нет, — ответил я. — Вся эта природа и нетронутая земля вокруг нас. Я не поддержу загрязнение его чем-то большим, чем то, что человеческое тело производит естественным путём.
 
 «Извини, но тебе придётся высохнуть», — продолжила я под её потрясённым и раздражённым взглядом.
 
-— Это касается всех, — повернулся я к Патриции. «Я был и буду оставаться гибким и уступчивым. Но как только здесь остаётся что-то, кроме тёплой воды, я просто не могу позволить этому продолжаться».
+— Это касается всех, — повернулся я к Патриции. — Я был и буду оставаться гибким и уступчивым. Но как только здесь остаётся что-то, кроме тёплой воды, я просто не могу позволить этому продолжаться.
 
 Патрисия не ответила и последовала за мной обратно внутрь, на прохладный воздух. Я предполагаю, что она обдумывала, как преподнести это откровение об отсутствии ТП группе 20-летних женщин.
 
@@ -644,9 +654,11 @@
 
 *019*2023-03-10 01:58
 
-«Просто чтобы было ясно», — начала Патрисия, как только дверь в мой кабинет закрылась. «Мне действительно нужно облегчиться», — теперь её рука глубоко и твёрдо упёрлась между её ног. «Но я не могу быть слабым перед учениками. Я авторитетная фигура».
+«Просто чтобы было ясно», — начала Патрисия, как только дверь в мой кабинет закрылась. — Мне действительно нужно облегчиться», — теперь её рука глубоко и твёрдо упёрлась между её ног.
 
-«Нет ничего слабого в том, чтобы пописить», — утешил я. «В последний раз, когда я проверял, это было довольно естественно».
+— Но я не могу быть слабым перед учениками. Я авторитетная фигура.
+
+— Нет ничего слабого в том, чтобы пописить, — утешил я. — В последний раз, когда я проверял, это было довольно естественно.
 
 Я вытащила запасные шорты и нижнее бельё (короткие спортивные шорты и несколько некрасивые чёрные трусики) из нижнего ящика стола. Немного помяты, но они будут работать.
 
@@ -664,7 +676,7 @@
 
 Я вытащил один, открыл его и прикрепил к промежности моих трусиков. Когда я поднял голову, Патриция смотрела на меня.
 
-«Это… феноменальная идея!» Она испугала меня, когда начала, но потом удивила. «Не могли бы вы поделиться одним для нуждающегося старого профессора?»
+— Это… феноменальная идея! — испугала она меня, когда начала, но потом удивила. — Не могли бы вы поделиться одним для нуждающегося старого профессора?
 
 Я улыбнулась и жестом попросила её помочь себе.
 
@@ -678,7 +690,9 @@
 
 Она снова натянула штаны, пока я натягивал шорты.
 
-Патрисия вздохнула. «Мне всё ещё приходится так сильно мочиться, но небольшая подстраховка никогда не повредит. Спасибо».
+Патрисия вздохнула. 
+
+— Мне всё ещё приходится так сильно мочиться, но небольшая подстраховка никогда не повредит. Спасибо.
 
 Она посмотрела на меня: «Кроме того, чтобы ты знал, твои… волосы на половых органах… торчат из твоих шорт, когда ты носишь их так коротко.
 
@@ -696,21 +710,27 @@
 
 «Я знаю, что что-то происходит с женщиной, которая уже некоторое время находится в в*нной, и мы довольно далеко отстаём», — начала она свою речь.
 
-«И моей дочери действительно нужно очень сильно уйти», — продолжила она. «Я видел, как вы отвели ту другую женщину куда-то ещё, чтобы справить нужду, и мне было интересно, можно ли взять мою дочь и меня туда, вместо того, чтобы продолжать ждать в очереди?»
+— И моей дочери действительно нужно очень сильно в туалет, — продолжила она. — Я видел, как вы отвели ту другую женщину куда-то ещё, чтобы справить нужду, и мне было интересно, можно ли взять мою дочь и меня туда, вместо того, чтобы продолжать ждать в очереди?
 
-Я пожал плечами. «Конечно».
+Я пожал плечами. 
 
-— О, чудесно, — щебетала она. «Саманта… Саманта! Идите сюда».
+— Конечно.
+
+— О, чудесно, — щебетала она. — Саманта… Саманта! Идите сюда.
 
 Дочь, Саманта, выглядела одновременно отчаявшейся и невероятно смущённой, когда она покинула своё место в очереди и присоединилась к матери.
 
 — Саманта, подожди ещё немного, ладно. Мы собираемся проследить за этой прекрасной женщиной и найти тебе, наконец, место, где можно пописить».
 
-«Мама… Это так неловко», — начала Саманта. — Я же говорил тебе, я буквально в порядке.
+— Мама… Это так неловко, — начала Саманта. — Я же говорил тебе, я буквально в порядке.
 
-«Саманта! Не будь смешным, — упрекнула её мать. «Вы буквально держите себя в руках. Я беспокоюсь о тебе».
+— Саманта! Не будь смешнjq, — упрекнула её мать. — Вы буквально держите себя в руках. Я беспокоюсь о тебе.
 
-Саманта вздохнула. — Я… полагаю, я бы не стал сейчас отказываться от туалета. Она наконец уступила.
+Саманта вздохнула^
+
+— Я… полагаю, я бы не стала сейчас отказываться от туалета.
+
+Она наконец уступила.
 
 Я лениво размышлял, что они скажут, когда мы доберёмся до моего полууединенного спонтанного выхода из в*нной.
 
@@ -722,7 +742,11 @@
 
 Однако на этот раз Патриция их знала — брюнетка средних лет.
 
-— Профессор Браун? Патрисия вздрогнула, обеспокоенная тем, почему профессор вышел из автобуса. «В чём дело?»
+— Профессор Браун?
+
+Патрисия вздрогнула, обеспокоенная тем, почему профессор вышел из автобуса. 
+
+— В чём дело?
 
 Профессор Браун пересекла цех, так что она оказалась рядом со мной и Патрисией; Саманта и её мать всего в нескольких шагах от нас.
 
