--- a/xxxx/75457-gym-day-an-interactive_02/rus.textile
+++ b/xxxx/75457-gym-day-an-interactive_02/rus.textile
@@ -1,4 +1,5 @@
-День спортзала | Интерактив — Страница 2
+Р”РµРЅСЊ СЃРїРѕСЂС‚Р·Р°Р»Р° | РРЅС‚РµСЂР°РєС‚РёРІ вЂ” РЎС‚СЂР°РЅРёС†Р° 2
 
-Автор: ,,,,
+РђРІС‚РѕСЂ: ,,,,
 
+#%
