--- a/xAsunax/29824-on-the-train/rus.textile
+++ b/xAsunax/29824-on-the-train/rus.textile
@@ -1,48 +1,48 @@
-На поезде
+РќР° РїРѕРµР·РґРµ
 
-Автор: xAsunax [x] (f)
+РђРІС‚РѕСЂ: xAsunax [x] (f)
 
 *000*2016-02-10 12:50
 
-Моя первая история.. Надеюсь, вам понравится ^^
+РњРѕСЏ РїРµСЂРІР°СЏ РёСЃС‚РѕСЂРёСЏ.. РќР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёС‚СЃСЏ ^^
 
-Эмма была симпатичной девушкой, ей было около 18 лет, у неё было стройное тело и грудь размером D. Все любили её за её личность. Однажды Эмма собиралась в ночной клуб со своими друзьями, она была дома и решала, что надеть, она выбрала сексуальный укороченный топ и мини-юбку… на ней были розовые хлопковые трусики.. Перед выходом она выпила чашку чая и направилась в ночной клуб, где встретила своих друзей, все они были такими же сексуальными, как и она.
+Р­РјРјР° Р±С‹Р»Р° СЃРёРјРїР°С‚РёС‡РЅРѕР№ РґРµРІСѓС€РєРѕР№, РµР№ Р±С‹Р»Рѕ РѕРєРѕР»Рѕ 18 Р»РµС‚, Сѓ РЅРµС‘ Р±С‹Р»Рѕ СЃС‚СЂРѕР№РЅРѕРµ С‚РµР»Рѕ Рё РіСЂСѓРґСЊ СЂР°Р·РјРµСЂРѕРј D. Р’СЃРµ Р»СЋР±РёР»Рё РµС‘ Р·Р° РµС‘ Р»РёС‡РЅРѕСЃС‚СЊ. РћРґРЅР°Р¶РґС‹ Р­РјРјР° СЃРѕР±РёСЂР°Р»Р°СЃСЊ РІ РЅРѕС‡РЅРѕР№ РєР»СѓР± СЃРѕ СЃРІРѕРёРјРё РґСЂСѓР·СЊСЏРјРё, РѕРЅР° Р±С‹Р»Р° РґРѕРјР° Рё СЂРµС€Р°Р»Р°, С‡С‚Рѕ РЅР°РґРµС‚СЊ, РѕРЅР° РІС‹Р±СЂР°Р»Р° СЃРµРєСЃСѓР°Р»СЊРЅС‹Р№ СѓРєРѕСЂРѕС‡РµРЅРЅС‹Р№ С‚РѕРї Рё РјРёРЅРё-СЋР±РєСѓвЂ¦ РЅР° РЅРµР№ Р±С‹Р»Рё СЂРѕР·РѕРІС‹Рµ С…Р»РѕРїРєРѕРІС‹Рµ С‚СЂСѓСЃРёРєРё.. РџРµСЂРµРґ РІС‹С…РѕРґРѕРј РѕРЅР° РІС‹РїРёР»Р° С‡Р°С€РєСѓ С‡Р°СЏ Рё РЅР°РїСЂР°РІРёР»Р°СЃСЊ РІ РЅРѕС‡РЅРѕР№ РєР»СѓР±, РіРґРµ РІСЃС‚СЂРµС‚РёР»Р° СЃРІРѕРёС… РґСЂСѓР·РµР№, РІСЃРµ РѕРЅРё Р±С‹Р»Рё С‚Р°РєРёРјРё Р¶Рµ СЃРµРєСЃСѓР°Р»СЊРЅС‹РјРё, РєР°Рє Рё РѕРЅР°.
 
-«О, вот и наша Эмма». сказал Менди. — «Почему ты так поздно гуль!»
+В«Рћ, РІРѕС‚ Рё РЅР°С€Р° Р­РјРјР°В». СЃРєР°Р·Р°Р» РњРµРЅРґРё. вЂ” В«РџРѕС‡РµРјСѓ С‚С‹ С‚Р°Рє РїРѕР·РґРЅРѕ РіСѓР»СЊ!В»
 
-«Хахахаха, прости, Менди, я собирала одежду ;)», — ответила Эмма.
+В«РҐР°С…Р°С…Р°С…Р°, РїСЂРѕСЃС‚Рё, РњРµРЅРґРё, СЏ СЃРѕР±РёСЂР°Р»Р° РѕРґРµР¶РґСѓ ;)В», вЂ” РѕС‚РІРµС‚РёР»Р° Р­РјРјР°.
 
-Девушки вошли и начали танцевать, Эмма не была пристрастием к алкоголю, поэтому она выпила не больше стакана пива, затем заказала апельсиновый сок, кофе и несколько чашек чая.. К тому времени, когда она начала танцевать, она чувствовала, как в нижней части живота нарастает давление. Но она ещё не была в отчаянии, поэтому продолжала танцевать. Она не стала бы тратить время на поход в в*нную. И к концу ночи она совсем отчаялась..
+Р”РµРІСѓС€РєРё РІРѕС€Р»Рё Рё РЅР°С‡Р°Р»Рё С‚Р°РЅС†РµРІР°С‚СЊ, Р­РјРјР° РЅРµ Р±С‹Р»Р° РїСЂРёСЃС‚СЂР°СЃС‚РёРµРј Рє Р°Р»РєРѕРіРѕР»СЋ, РїРѕСЌС‚РѕРјСѓ РѕРЅР° РІС‹РїРёР»Р° РЅРµ Р±РѕР»СЊС€Рµ СЃС‚Р°РєР°РЅР° РїРёРІР°, Р·Р°С‚РµРј Р·Р°РєР°Р·Р°Р»Р° Р°РїРµР»СЊСЃРёРЅРѕРІС‹Р№ СЃРѕРє, РєРѕС„Рµ Рё РЅРµСЃРєРѕР»СЊРєРѕ С‡Р°С€РµРє С‡Р°СЏ.. Рљ С‚РѕРјСѓ РІСЂРµРјРµРЅРё, РєРѕРіРґР° РѕРЅР° РЅР°С‡Р°Р»Р° С‚Р°РЅС†РµРІР°С‚СЊ, РѕРЅР° С‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє РІ РЅРёР¶РЅРµР№ С‡Р°СЃС‚Рё Р¶РёРІРѕС‚Р° РЅР°СЂР°СЃС‚Р°РµС‚ РґР°РІР»РµРЅРёРµ. РќРѕ РѕРЅР° РµС‰С‘ РЅРµ Р±С‹Р»Р° РІ РѕС‚С‡Р°СЏРЅРёРё, РїРѕСЌС‚РѕРјСѓ РїСЂРѕРґРѕР»Р¶Р°Р»Р° С‚Р°РЅС†РµРІР°С‚СЊ. РћРЅР° РЅРµ СЃС‚Р°Р»Р° Р±С‹ С‚СЂР°С‚РёС‚СЊ РІСЂРµРјСЏ РЅР° РїРѕС…РѕРґ РІ РІ*РЅРЅСѓСЋ. Р Рє РєРѕРЅС†Сѓ РЅРѕС‡Рё РѕРЅР° СЃРѕРІСЃРµРј РѕС‚С‡Р°СЏР»Р°СЃСЊ..
 
-Когда она решила пойти в туалет, её увидел её друг Менди и сказал ей, что они должны пойти, потому что их друзья доставили много неприятностей. Эмма была в нескольких шагах от в*нной, и теперь ей нужно уйти.
+РљРѕРіРґР° РѕРЅР° СЂРµС€РёР»Р° РїРѕР№С‚Рё РІ С‚СѓР°Р»РµС‚, РµС‘ СѓРІРёРґРµР» РµС‘ РґСЂСѓРі РњРµРЅРґРё Рё СЃРєР°Р·Р°Р» РµР№, С‡С‚Рѕ РѕРЅРё РґРѕР»Р¶РЅС‹ РїРѕР№С‚Рё, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РёС… РґСЂСѓР·СЊСЏ РґРѕСЃС‚Р°РІРёР»Рё РјРЅРѕРіРѕ РЅРµРїСЂРёСЏС‚РЅРѕСЃС‚РµР№. Р­РјРјР° Р±С‹Р»Р° РІ РЅРµСЃРєРѕР»СЊРєРёС… С€Р°РіР°С… РѕС‚ РІ*РЅРЅРѕР№, Рё С‚РµРїРµСЂСЊ РµР№ РЅСѓР¶РЅРѕ СѓР№С‚Рё.
 
-— Ладно, я ещё не в таком отчаянии. Эмма подумала: «Я могу потерпеть, пока не вернусь домой».
+вЂ” Р›Р°РґРЅРѕ, СЏ РµС‰С‘ РЅРµ РІ С‚Р°РєРѕРј РѕС‚С‡Р°СЏРЅРёРё. Р­РјРјР° РїРѕРґСѓРјР°Р»Р°: В«РЇ РјРѕРіСѓ РїРѕС‚РµСЂРїРµС‚СЊ, РїРѕРєР° РЅРµ РІРµСЂРЅСѓСЃСЊ РґРѕРјРѕР№В».
 
-Дом Эммы находился недалеко от ночного клуба, но ей нужно было ехать на поезде. Эмма попрощалась с Менди и остальными и пошла ехать на поезде. К сожалению, поезд был очень переполнен.
+Р”РѕРј Р­РјРјС‹ РЅР°С…РѕРґРёР»СЃСЏ РЅРµРґР°Р»РµРєРѕ РѕС‚ РЅРѕС‡РЅРѕРіРѕ РєР»СѓР±Р°, РЅРѕ РµР№ РЅСѓР¶РЅРѕ Р±С‹Р»Рѕ РµС…Р°С‚СЊ РЅР° РїРѕРµР·РґРµ. Р­РјРјР° РїРѕРїСЂРѕС‰Р°Р»Р°СЃСЊ СЃ РњРµРЅРґРё Рё РѕСЃС‚Р°Р»СЊРЅС‹РјРё Рё РїРѕС€Р»Р° РµС…Р°С‚СЊ РЅР° РїРѕРµР·РґРµ. Рљ СЃРѕР¶Р°Р»РµРЅРёСЋ, РїРѕРµР·Рґ Р±С‹Р» РѕС‡РµРЅСЊ РїРµСЂРµРїРѕР»РЅРµРЅ.
 
-«Какого чёрта поезд такой переполненный!» Эмма подумала. «Чёрт, мне действительно нужен туалет»
+В«РљР°РєРѕРіРѕ С‡С‘СЂС‚Р° РїРѕРµР·Рґ С‚Р°РєРѕР№ РїРµСЂРµРїРѕР»РЅРµРЅРЅС‹Р№!В» Р­РјРјР° РїРѕРґСѓРјР°Р»Р°. В«Р§С‘СЂС‚, РјРЅРµ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РЅСѓР¶РµРЅ С‚СѓР°Р»РµС‚В»
 
-Она стояла рядом с поездным столбом рядом с дверями, чтобы побыстрее выйти, когда дверь откроется.. «Блин, почему я поехала на поезде». она думала
+РћРЅР° СЃС‚РѕСЏР»Р° СЂСЏРґРѕРј СЃ РїРѕРµР·РґРЅС‹Рј СЃС‚РѕР»Р±РѕРј СЂСЏРґРѕРј СЃ РґРІРµСЂСЏРјРё, С‡С‚РѕР±С‹ РїРѕР±С‹СЃС‚СЂРµРµ РІС‹Р№С‚Рё, РєРѕРіРґР° РґРІРµСЂСЊ РѕС‚РєСЂРѕРµС‚СЃСЏ.. В«Р‘Р»РёРЅ, РїРѕС‡РµРјСѓ СЏ РїРѕРµС…Р°Р»Р° РЅР° РїРѕРµР·РґРµВ». РѕРЅР° РґСѓРјР°Р»Р°
 
-Теперь она переставляла ноги и пыталась сбалансировать себя.. Это придавало ей такой сексуальный вид.. Внезапно она почувствовала, как рука коснулась её голых ног.
+РўРµРїРµСЂСЊ РѕРЅР° РїРµСЂРµСЃС‚Р°РІР»СЏР»Р° РЅРѕРіРё Рё РїС‹С‚Р°Р»Р°СЃСЊ СЃР±Р°Р»Р°РЅСЃРёСЂРѕРІР°С‚СЊ СЃРµР±СЏ.. Р­С‚Рѕ РїСЂРёРґР°РІР°Р»Рѕ РµР№ С‚Р°РєРѕР№ СЃРµРєСЃСѓР°Р»СЊРЅС‹Р№ РІРёРґ.. Р’РЅРµР·Р°РїРЅРѕ РѕРЅР° РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє СЂСѓРєР° РєРѕСЃРЅСѓР»Р°СЃСЊ РµС‘ РіРѕР»С‹С… РЅРѕРі.
 
-«Втф!! Почему именно сейчас», — пробормотала Эмма. «Если бы мне не нужен был туалет, я бы надрал ему попу».
+В«Р’С‚С„!! РџРѕС‡РµРјСѓ РёРјРµРЅРЅРѕ СЃРµР№С‡Р°СЃВ», вЂ” РїСЂРѕР±РѕСЂРјРѕС‚Р°Р»Р° Р­РјРјР°. В«Р•СЃР»Рё Р±С‹ РјРЅРµ РЅРµ РЅСѓР¶РµРЅ Р±С‹Р» С‚СѓР°Р»РµС‚, СЏ Р±С‹ РЅР°РґСЂР°Р» РµРјСѓ РїРѕРїСѓВ».
 
-Мужчина начал скользить руками, пока не достиг её попки… он начал сжимать её. Затем он оставил её юбку, чтобы увидеть её трусики-пино. «Чертовски сексуальная девушка». он думал. В поезде было так тесно, что никто не мог видеть, что он делает… Он начал скользить пальцами, пока не достиг её промежности. Эмма начала ёрзать: «О, нет, пожалуйста, не сейчас», — сказала она тихим голосом. Мужчина начал медленно тереть её клитор, а когда услышал её стоны, начал тереть всё быстрее и быстрее. Бедная Эмма, она крепко прижалась к шесту, надеясь, что сможет быстрее добраться до дома. Мужчина возбудился, стянул с неё трусики и начал быстро дрочить её.
+РњСѓР¶С‡РёРЅР° РЅР°С‡Р°Р» СЃРєРѕР»СЊР·РёС‚СЊ СЂСѓРєР°РјРё, РїРѕРєР° РЅРµ РґРѕСЃС‚РёРі РµС‘ РїРѕРїРєРёвЂ¦ РѕРЅ РЅР°С‡Р°Р» СЃР¶РёРјР°С‚СЊ РµС‘. Р—Р°С‚РµРј РѕРЅ РѕСЃС‚Р°РІРёР» РµС‘ СЋР±РєСѓ, С‡С‚РѕР±С‹ СѓРІРёРґРµС‚СЊ РµС‘ С‚СЂСѓСЃРёРєРё-РїРёРЅРѕ. В«Р§РµСЂС‚РѕРІСЃРєРё СЃРµРєСЃСѓР°Р»СЊРЅР°СЏ РґРµРІСѓС€РєР°В». РѕРЅ РґСѓРјР°Р». Р’ РїРѕРµР·РґРµ Р±С‹Р»Рѕ С‚Р°Рє С‚РµСЃРЅРѕ, С‡С‚Рѕ РЅРёРєС‚Рѕ РЅРµ РјРѕРі РІРёРґРµС‚СЊ, С‡С‚Рѕ РѕРЅ РґРµР»Р°РµС‚вЂ¦ РћРЅ РЅР°С‡Р°Р» СЃРєРѕР»СЊР·РёС‚СЊ РїР°Р»СЊС†Р°РјРё, РїРѕРєР° РЅРµ РґРѕСЃС‚РёРі РµС‘ РїСЂРѕРјРµР¶РЅРѕСЃС‚Рё. Р­РјРјР° РЅР°С‡Р°Р»Р° С‘СЂР·Р°С‚СЊ: В«Рћ, РЅРµС‚, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РЅРµ СЃРµР№С‡Р°СЃВ», вЂ” СЃРєР°Р·Р°Р»Р° РѕРЅР° С‚РёС…РёРј РіРѕР»РѕСЃРѕРј. РњСѓР¶С‡РёРЅР° РЅР°С‡Р°Р» РјРµРґР»РµРЅРЅРѕ С‚РµСЂРµС‚СЊ РµС‘ РєР»РёС‚РѕСЂ, Р° РєРѕРіРґР° СѓСЃР»С‹С€Р°Р» РµС‘ СЃС‚РѕРЅС‹, РЅР°С‡Р°Р» С‚РµСЂРµС‚СЊ РІСЃС‘ Р±С‹СЃС‚СЂРµРµ Рё Р±С‹СЃС‚СЂРµРµ. Р‘РµРґРЅР°СЏ Р­РјРјР°, РѕРЅР° РєСЂРµРїРєРѕ РїСЂРёР¶Р°Р»Р°СЃСЊ Рє С€РµСЃС‚Сѓ, РЅР°РґРµСЏСЃСЊ, С‡С‚Рѕ СЃРјРѕР¶РµС‚ Р±С‹СЃС‚СЂРµРµ РґРѕР±СЂР°С‚СЊСЃСЏ РґРѕ РґРѕРјР°. РњСѓР¶С‡РёРЅР° РІРѕР·Р±СѓРґРёР»СЃСЏ, СЃС‚СЏРЅСѓР» СЃ РЅРµС‘ С‚СЂСѓСЃРёРєРё Рё РЅР°С‡Р°Р» Р±С‹СЃС‚СЂРѕ РґСЂРѕС‡РёС‚СЊ РµС‘.
 
-«О, чёрт, остановись, я сейчас пописаю.. Прекрати, пожалуйста.. Пожалуйста, нееет», — сказала Эмма с болью. Мужчина продолжал щупать её. Эмма изо всех сил старалась контролировать поток, который кричал, чтобы выйти из её влагалища. Затем пальцы мужчины начали давить на её низ живота. «Чёрт, он заметил! Что мне теперь делать?» сказала Эмма. Мужчина толкал и толкал, пока несколько струй не вырвались из губ её влагалища. К счастью, поезд достиг пункта назначения, и она ушла, не оглядываясь, чтобы узнать, кто это.. Она переминалась с места на место, скрещивая и распрямляя ноги, крепко сжимая промежность руками, она делала всё возможное, чтобы удержать жидкость. То, что сделал мужчина, увеличивает её отчаяние.. К счастью, она благополучно добралась до своей квартиры, её трусики были мокрыми, и она была на грани потери себя. Вдруг она услышала звук. Она пошла посмотреть, стараясь держать ноги плотно сомкнутыми. Она увидела своего бывшего парня.
+В«Рћ, С‡С‘СЂС‚, РѕСЃС‚Р°РЅРѕРІРёСЃСЊ, СЏ СЃРµР№С‡Р°СЃ РїРѕРїРёСЃР°СЋ.. РџСЂРµРєСЂР°С‚Рё, РїРѕР¶Р°Р»СѓР№СЃС‚Р°.. РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РЅРµРµРµС‚В», вЂ” СЃРєР°Р·Р°Р»Р° Р­РјРјР° СЃ Р±РѕР»СЊСЋ. РњСѓР¶С‡РёРЅР° РїСЂРѕРґРѕР»Р¶Р°Р» С‰СѓРїР°С‚СЊ РµС‘. Р­РјРјР° РёР·Рѕ РІСЃРµС… СЃРёР» СЃС‚Р°СЂР°Р»Р°СЃСЊ РєРѕРЅС‚СЂРѕР»РёСЂРѕРІР°С‚СЊ РїРѕС‚РѕРє, РєРѕС‚РѕСЂС‹Р№ РєСЂРёС‡Р°Р», С‡С‚РѕР±С‹ РІС‹Р№С‚Рё РёР· РµС‘ РІР»Р°РіР°Р»РёС‰Р°. Р—Р°С‚РµРј РїР°Р»СЊС†С‹ РјСѓР¶С‡РёРЅС‹ РЅР°С‡Р°Р»Рё РґР°РІРёС‚СЊ РЅР° РµС‘ РЅРёР· Р¶РёРІРѕС‚Р°. В«Р§С‘СЂС‚, РѕРЅ Р·Р°РјРµС‚РёР»! Р§С‚Рѕ РјРЅРµ С‚РµРїРµСЂСЊ РґРµР»Р°С‚СЊ?В» СЃРєР°Р·Р°Р»Р° Р­РјРјР°. РњСѓР¶С‡РёРЅР° С‚РѕР»РєР°Р» Рё С‚РѕР»РєР°Р», РїРѕРєР° РЅРµСЃРєРѕР»СЊРєРѕ СЃС‚СЂСѓР№ РЅРµ РІС‹СЂРІР°Р»РёСЃСЊ РёР· РіСѓР± РµС‘ РІР»Р°РіР°Р»РёС‰Р°. Рљ СЃС‡Р°СЃС‚СЊСЋ, РїРѕРµР·Рґ РґРѕСЃС‚РёРі РїСѓРЅРєС‚Р° РЅР°Р·РЅР°С‡РµРЅРёСЏ, Рё РѕРЅР° СѓС€Р»Р°, РЅРµ РѕРіР»СЏРґС‹РІР°СЏСЃСЊ, С‡С‚РѕР±С‹ СѓР·РЅР°С‚СЊ, РєС‚Рѕ СЌС‚Рѕ.. РћРЅР° РїРµСЂРµРјРёРЅР°Р»Р°СЃСЊ СЃ РјРµСЃС‚Р° РЅР° РјРµСЃС‚Рѕ, СЃРєСЂРµС‰РёРІР°СЏ Рё СЂР°СЃРїСЂСЏРјР»СЏСЏ РЅРѕРіРё, РєСЂРµРїРєРѕ СЃР¶РёРјР°СЏ РїСЂРѕРјРµР¶РЅРѕСЃС‚СЊ СЂСѓРєР°РјРё, РѕРЅР° РґРµР»Р°Р»Р° РІСЃС‘ РІРѕР·РјРѕР¶РЅРѕРµ, С‡С‚РѕР±С‹ СѓРґРµСЂР¶Р°С‚СЊ Р¶РёРґРєРѕСЃС‚СЊ. РўРѕ, С‡С‚Рѕ СЃРґРµР»Р°Р» РјСѓР¶С‡РёРЅР°, СѓРІРµР»РёС‡РёРІР°РµС‚ РµС‘ РѕС‚С‡Р°СЏРЅРёРµ.. Рљ СЃС‡Р°СЃС‚СЊСЋ, РѕРЅР° Р±Р»Р°РіРѕРїРѕР»СѓС‡РЅРѕ РґРѕР±СЂР°Р»Р°СЃСЊ РґРѕ СЃРІРѕРµР№ РєРІР°СЂС‚РёСЂС‹, РµС‘ С‚СЂСѓСЃРёРєРё Р±С‹Р»Рё РјРѕРєСЂС‹РјРё, Рё РѕРЅР° Р±С‹Р»Р° РЅР° РіСЂР°РЅРё РїРѕС‚РµСЂРё СЃРµР±СЏ. Р’РґСЂСѓРі РѕРЅР° СѓСЃР»С‹С€Р°Р»Р° Р·РІСѓРє. РћРЅР° РїРѕС€Р»Р° РїРѕСЃРјРѕС‚СЂРµС‚СЊ, СЃС‚Р°СЂР°СЏСЃСЊ РґРµСЂР¶Р°С‚СЊ РЅРѕРіРё РїР»РѕС‚РЅРѕ СЃРѕРјРєРЅСѓС‚С‹РјРё. РћРЅР° СѓРІРёРґРµР»Р° СЃРІРѕРµРіРѕ Р±С‹РІС€РµРіРѕ РїР°СЂРЅСЏ.
 
-«О, вот и ты. Тебе понравилось веселиться с другими парнями? Надеюсь, тебе было весело, потому что теперь моя очередь веселиться»
+В«Рћ, РІРѕС‚ Рё С‚С‹. РўРµР±Рµ РїРѕРЅСЂР°РІРёР»РѕСЃСЊ РІРµСЃРµР»РёС‚СЊСЃСЏ СЃ РґСЂСѓРіРёРјРё РїР°СЂРЅСЏРјРё? РќР°РґРµСЋСЃСЊ, С‚РµР±Рµ Р±С‹Р»Рѕ РІРµСЃРµР»Рѕ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ С‚РµРїРµСЂСЊ РјРѕСЏ РѕС‡РµСЂРµРґСЊ РІРµСЃРµР»РёС‚СЊСЃСЏВ»
 
-«Ты что!!! Мы расстались ты с ума сошёл! Оставь меня в покое!», — крикнула Эмма.
+В«РўС‹ С‡С‚Рѕ!!! РњС‹ СЂР°СЃСЃС‚Р°Р»РёСЃСЊ С‚С‹ СЃ СѓРјР° СЃРѕС€С‘Р»! РћСЃС‚Р°РІСЊ РјРµРЅСЏ РІ РїРѕРєРѕРµ!В», вЂ” РєСЂРёРєРЅСѓР»Р° Р­РјРјР°.
 
-«Ха-ха-ха, мы посмотрим на это», — сказал парень.
+В«РҐР°-С…Р°-С…Р°, РјС‹ РїРѕСЃРјРѕС‚СЂРёРј РЅР° СЌС‚РѕВ», вЂ” СЃРєР°Р·Р°Р» РїР°СЂРµРЅСЊ.
 
-Он был пьян. Он начал хватать её и крепко держал, от этого давление на её мочевой пузырь увеличилось.
+РћРЅ Р±С‹Р» РїСЊСЏРЅ. РћРЅ РЅР°С‡Р°Р» С…РІР°С‚Р°С‚СЊ РµС‘ Рё РєСЂРµРїРєРѕ РґРµСЂР¶Р°Р», РѕС‚ СЌС‚РѕРіРѕ РґР°РІР»РµРЅРёРµ РЅР° РµС‘ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ СѓРІРµР»РёС‡РёР»РѕСЃСЊ.
 
-«Оставь меня в покое, мне нужно пописить», — закричала Эмма.
+В«РћСЃС‚Р°РІСЊ РјРµРЅСЏ РІ РїРѕРєРѕРµ, РјРЅРµ РЅСѓР¶РЅРѕ РїРѕРїРёСЃРёС‚СЊВ», вЂ” Р·Р°РєСЂРёС‡Р°Р»Р° Р­РјРјР°.
 
-Мальчик ухмыльнулся: «Это будет лучшая ночь в моей жизни», — подумал он. Затем он повернулся к ней и сказал: «Ну и что, если тебе нужно пописить.. Я не отпущу тебя, хахахаха». Она сказала ему, что он сошёл с ума, и в ответ на это он схватил её и бросил на кровать.. Это заставило несколько рывков вырваться, теперь было видно пятно.. это его возбудило, он наклонился над ней и начал поцеловав её, она поцеловала его в ответ.. Он начал массировать её грудь, затем он достиг её живота..
+РњР°Р»СЊС‡РёРє СѓС…РјС‹Р»СЊРЅСѓР»СЃСЏ: В«Р­С‚Рѕ Р±СѓРґРµС‚ Р»СѓС‡С€Р°СЏ РЅРѕС‡СЊ РІ РјРѕРµР№ Р¶РёР·РЅРёВ», вЂ” РїРѕРґСѓРјР°Р» РѕРЅ. Р—Р°С‚РµРј РѕРЅ РїРѕРІРµСЂРЅСѓР»СЃСЏ Рє РЅРµР№ Рё СЃРєР°Р·Р°Р»: В«РќСѓ Рё С‡С‚Рѕ, РµСЃР»Рё С‚РµР±Рµ РЅСѓР¶РЅРѕ РїРѕРїРёСЃРёС‚СЊ.. РЇ РЅРµ РѕС‚РїСѓС‰Сѓ С‚РµР±СЏ, С…Р°С…Р°С…Р°С…Р°В». РћРЅР° СЃРєР°Р·Р°Р»Р° РµРјСѓ, С‡С‚Рѕ РѕРЅ СЃРѕС€С‘Р» СЃ СѓРјР°, Рё РІ РѕС‚РІРµС‚ РЅР° СЌС‚Рѕ РѕРЅ СЃС…РІР°С‚РёР» РµС‘ Рё Р±СЂРѕСЃРёР» РЅР° РєСЂРѕРІР°С‚СЊ.. Р­С‚Рѕ Р·Р°СЃС‚Р°РІРёР»Рѕ РЅРµСЃРєРѕР»СЊРєРѕ СЂС‹РІРєРѕРІ РІС‹СЂРІР°С‚СЊСЃСЏ, С‚РµРїРµСЂСЊ Р±С‹Р»Рѕ РІРёРґРЅРѕ РїСЏС‚РЅРѕ.. СЌС‚Рѕ РµРіРѕ РІРѕР·Р±СѓРґРёР»Рѕ, РѕРЅ РЅР°РєР»РѕРЅРёР»СЃСЏ РЅР°Рґ РЅРµР№ Рё РЅР°С‡Р°Р» РїРѕС†РµР»РѕРІР°РІ РµС‘, РѕРЅР° РїРѕС†РµР»РѕРІР°Р»Р° РµРіРѕ РІ РѕС‚РІРµС‚.. РћРЅ РЅР°С‡Р°Р» РјР°СЃСЃРёСЂРѕРІР°С‚СЊ РµС‘ РіСЂСѓРґСЊ, Р·Р°С‚РµРј РѕРЅ РґРѕСЃС‚РёРі РµС‘ Р¶РёРІРѕС‚Р°..
 
-Он начал давить на её мочевой пузырь, что заставило её извиваться и сунуть руки между ног, изо всех сил стараясь не писить и не удовлетворять его. «Чувак, ты меня возбуждаешь», — сказал он. Затем он убрал её руки и начал так быстро тереть её клитор.. Вырвалась ещё одна струйка. Она плакала, умоляя его не делать этого с ней, но он не слушал её. Затем он начал перебирать её пальцами и нажимать на её мочевой пузырь одновременно, пока она не застонала, крепко скрестив ноги вокруг его руки, но теперь это не помогло. Она писила, стоны облегчения сорвались с её губ, а по щекам потекли слёзы.
+РћРЅ РЅР°С‡Р°Р» РґР°РІРёС‚СЊ РЅР° РµС‘ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ, С‡С‚Рѕ Р·Р°СЃС‚Р°РІРёР»Рѕ РµС‘ РёР·РІРёРІР°С‚СЊСЃСЏ Рё СЃСѓРЅСѓС‚СЊ СЂСѓРєРё РјРµР¶РґСѓ РЅРѕРі, РёР·Рѕ РІСЃРµС… СЃРёР» СЃС‚Р°СЂР°СЏСЃСЊ РЅРµ РїРёСЃРёС‚СЊ Рё РЅРµ СѓРґРѕРІР»РµС‚РІРѕСЂСЏС‚СЊ РµРіРѕ. В«Р§СѓРІР°Рє, С‚С‹ РјРµРЅСЏ РІРѕР·Р±СѓР¶РґР°РµС€СЊВ», вЂ” СЃРєР°Р·Р°Р» РѕРЅ. Р—Р°С‚РµРј РѕРЅ СѓР±СЂР°Р» РµС‘ СЂСѓРєРё Рё РЅР°С‡Р°Р» С‚Р°Рє Р±С‹СЃС‚СЂРѕ С‚РµСЂРµС‚СЊ РµС‘ РєР»РёС‚РѕСЂ.. Р’С‹СЂРІР°Р»Р°СЃСЊ РµС‰С‘ РѕРґРЅР° СЃС‚СЂСѓР№РєР°. РћРЅР° РїР»Р°РєР°Р»Р°, СѓРјРѕР»СЏСЏ РµРіРѕ РЅРµ РґРµР»Р°С‚СЊ СЌС‚РѕРіРѕ СЃ РЅРµР№, РЅРѕ РѕРЅ РЅРµ СЃР»СѓС€Р°Р» РµС‘. Р—Р°С‚РµРј РѕРЅ РЅР°С‡Р°Р» РїРµСЂРµР±РёСЂР°С‚СЊ РµС‘ РїР°Р»СЊС†Р°РјРё Рё РЅР°Р¶РёРјР°С‚СЊ РЅР° РµС‘ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РѕРґРЅРѕРІСЂРµРјРµРЅРЅРѕ, РїРѕРєР° РѕРЅР° РЅРµ Р·Р°СЃС‚РѕРЅР°Р»Р°, РєСЂРµРїРєРѕ СЃРєСЂРµСЃС‚РёРІ РЅРѕРіРё РІРѕРєСЂСѓРі РµРіРѕ СЂСѓРєРё, РЅРѕ С‚РµРїРµСЂСЊ СЌС‚Рѕ РЅРµ РїРѕРјРѕРіР»Рѕ. РћРЅР° РїРёСЃРёР»Р°, СЃС‚РѕРЅС‹ РѕР±Р»РµРіС‡РµРЅРёСЏ СЃРѕСЂРІР°Р»РёСЃСЊ СЃ РµС‘ РіСѓР±, Р° РїРѕ С‰РµРєР°Рј РїРѕС‚РµРєР»Рё СЃР»С‘Р·С‹.
 
